# script2package

./: index.html  readme.md  script2package.py  setup.py
Example/add/package/: setup.cfg
example/script2package/: readme.md  setup.cfg  setup.py
example/script2package/script2package/: __main__.py
package/: readme.md  setup.cfg
package/script2package/: __init__.py
script2package/: __init__.py  cli.py  util.py
